# libvham

./: .env.example  .gitignore  Makefile.in  README.md  configure  configure.ac
include/vham/: account.h  causes.h  cc.h  codec.h  codec_audio.h  composites.h  dtmf.h  envcfg.h  g711.h  gps.h  h264.h  im.h  jitter.h  nat.h  oam.h  passthrough.h  regreq.h  regrsp.h  retx.h  rtcp.h  rtp.h  sdp.h  segment.h  srtp.h  tokenstore.h  voice.h  voice_call.h
src/: account.c  auth.c  causes.c  cc.c  codec.c  codec_amr.c  codec_audio.c  codec_ilbc.c  codec_opus.c  composites.c  decoder.c  dtmf.c  envcfg.c  g711.c  gps.c  h264.c  im.c  jitter.c  md5.c  md5_internal.h  nat.c  oam.c  passthrough.c  regreq.c  regrsp.c  retx.c  rtcp.c  rtp.c  sdp.c  segment.c  srtp.c  srtp_mbedtls.c  srtp_openssl.c  tokenstore.c  voice.c  voice_call.c
test/: live.sh  mock_server.c  mock_server.h  test_codec.c  test_fixtures.h
tools/: vham-activate.c  vham-call.c  vham-cli.c  vham-login.c  vham-session.c  vham-voice.c
